--- a/index.html
+++ b/index.html
@@ -16,18 +16,23 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Portfolio</title>
-</head>
-<body>
-  <h2>Albert`s Portfolio</h2>
-  <h3>I`m a web Developer</h3>
-   <hr>
-   <a href="./public/movie-ranking.html"><img src="./assets/images/movie-ranking.png" height="200" alt=""></a>
-   <hr>
-   <a href="./public/birthday-invite.html"><img src="./assets/images/birthday-invite.png" height="200" alt=""></a>
-    <hr>
-    <a href="./public/contact.html">Contact Me</a>
-</body>
+    <head>
+        <meta charset="utf-8">
+    <title>My Website </title>
+    </head>
+    <body>
+    <h1>I am Albert</h1>
+        <h1>I am Web Developer</h1>
+        <hr/>
+        <h3><a href="./public/movie-ranking.html">Movie Ranking Project </a></h3>
+        <img src="./assets/images/movie-ranking.png" height="250" >
+        <h3><a href="./public/birthday-invite.html">Birthday Invite project</a></h3>
+        <img src="./assets/images/birthday-invite.png" height="250">
+        <hr/>
+        <a href="./public/about.html">About Me</a>
+        <a href="./public/contact.html">Contact Me</a>
+    </body>
+
+
+
 </html>
